checking if fixed button color on mobile

--- a/limit-break-app/src/App.css
+++ b/limit-break-app/src/App.css
@@ -45,6 +45,7 @@ button {
     margin: 1em;
     font-size: 1.5em;
     border-radius: 1em;
+    color: black;
 }
 
 .new-fear-button {
